# demo-mesh-parameterize

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE.txt  README.md  emsc-setup.ps1  emsc-setup.sh
.github/workflows/: build.yml
assets/models/: camel-head.ply  human-head.ply  ogre-face.ply  pig-head.ply  vw-bug.ply
assets/shaders/: matcap_debug.frag.glsl  matcap_debug.vert.glsl
cmake/: app-utils.cmake
src/: assets.cpp  assets.hpp  graphics.c  graphics.cpp  graphics.h  graphics.hpp  least_squares_conformal_map.hpp  main.cpp  scene.cpp  scene.hpp  spectral_conformal_map.hpp  tasks.cpp  tasks.hpp
src/shim/: happly.hpp
web/: coi-serviceworker.js  index.html
